feat: добавлены компоненты Register и Login

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,7 +1,12 @@
 .header {
+  grid-area: header;
+  width: 100%;
   max-width: 880px;
   margin: 0 auto;
   border-bottom: 1px solid rgba(84,84,84,0.7);
+  display: grid;
+  grid-template-columns: max-content 1fr max-content;
+  grid-template-rows: 1fr;
 }
 
 
