--- a/src/blocks/main-page/main-page.css
+++ b/src/blocks/main-page/main-page.css
@@ -9,6 +9,16 @@
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
+  min-height: 100vh;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: max-content 1fr max-content;
+  grid-template-areas:
+  "header"
+  "content"
+  "footer";
+  justify-items: stretch;
 }
 
 @media screen and (max-width: 425px){
