feat: добавить адаптивную верстку шапки

--- a/src/blocks/header/__auth-container/header__auth-container.css
+++ b/src/blocks/header/__auth-container/header__auth-container.css
@@ -1,4 +1,16 @@
 .header__auth-container {
-  display: flex;
-  justify-content: end;
+  grid-area: login;
+  display: grid;
+  grid-template-columns: max-content max-content;
+  grid-template-rows: 1fr;
+  justify-items: end;
+  align-items: center;
 }
+
+@media screen and (max-width: 425px){
+  .header__auth-container {
+    margin-right: 30px;
+  }
+}
+
+
