--- a/src/blocks/header/__email/header__email.css
+++ b/src/blocks/header/__email/header__email.css
@@ -3,4 +3,27 @@
   font-size: 18px;
   line-height: 22px;
   margin-right: 24px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
+}
+
+@media screen and (max-width: 700px){
+  .header__email {
+    max-width: 220px;
+  }
+}
+
+@media screen and (max-width: 450px){
+  .header__email {
+    max-width: 180px;
+  }
+}
+
+@media screen and (max-width: 425px){
+  .header__email {
+    margin: 0;
+    max-width: 260px;
+  }
 }
