--- a/src/blocks/header/__link-auth/header__link-auth.css
+++ b/src/blocks/header/__link-auth/header__link-auth.css
@@ -6,3 +6,10 @@
   color: #FFFFFF;
   text-decoration: none;
 }
+
+@media screen and (max-width: 425px){
+  .header__link-auth {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
