--- a/src/blocks/form/__submit/form__submit.css
+++ b/src/blocks/form/__submit/form__submit.css
@@ -11,3 +11,10 @@
   text-align: center;
   padding: 13px 0 13px;
 }
+
+@media screen and (max-width: 425px){
+  .form__submit {
+    font-size: 16px;
+    line-height: 19px;
+  }
+}
