--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -7,7 +7,13 @@
   display: grid;
   grid-template-columns: max-content 1fr max-content;
   grid-template-rows: 1fr;
+  grid-template-areas: "logo empty login";
+
 }
+
+
+
+
 
 
 
