--- a/src/blocks/main-page/main-page.css
+++ b/src/blocks/main-page/main-page.css
@@ -1,6 +1,6 @@
 .main-page {
   background-color: #000000;
-  padding: 45px 0 60px;
+  padding: 0 0 60px;
   color: #FFFFFF;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -23,6 +23,6 @@
 
 @media screen and (max-width: 425px){
   .main-page {
-    padding: 28px 0 36px;
+    padding: 0 0 36px;
   }
 }
