--- a/src/blocks/sign/__title/sign__title.css
+++ b/src/blocks/sign/__title/sign__title.css
@@ -6,3 +6,10 @@
   line-height: 29px;
   text-align: center;
 }
+
+@media screen and (max-width: 425px){
+  .sign__title {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
