--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -11,6 +11,12 @@
 @import url(../blocks/header/__auth-container/header__auth-container.css);
 @import url(../blocks/header/__email/header__email.css);
 @import url(../blocks/header/__link-auth/header__link-auth.css);
+@import url(../blocks/header/__link-auth/_logged/header__link-auth_logged.css);
+@import url(../blocks/header/__auth-container/_hidden/header__auth-container_hidden.css);
+@import url(../blocks/header/__auth-container/_logged/header__auth-container_logged.css);
+@import url(../blocks/header/__menu-login/header__menu-login.css);
+@import url(../blocks/header/_vertical/header_vertical.css);
+@import url(../blocks/header/_mobile-logged/header__mobile-logged.css);
 
 /*Стили блока logo*/
 @import url(../blocks/logo/logo.css);
@@ -61,11 +67,13 @@
 @import url(../blocks/popup/__card-container/popup__card-container.css);
 @import url(../blocks/popup/__mask/popup__mask.css);
 @import url(../blocks/popup/__caption/popup__caption.css);
-
+@import url(../blocks/popup/__mask-login/popup__mask-login.css);
+@import url(../blocks/popup/__title/_login/popup__title_login.css);
+@import url(../blocks/popup/__container/_login/popup__container_login.css);
 /*Стили блока close-button*/
 @import url(../blocks/close-button/close-button.css);
 @import url(../blocks/close-button/_popup/close-button_popup.css);
-
+@import url(../blocks/close-button/_header/close-button_header.css);
 /*Стили блока register*/
 @import url(../blocks/sign/sign.css);
 @import url(../blocks/sign/__title/sign__title.css);
